<resources>
    <string name="app_name">Quiz App</string>
    <string name="quiz_app">Quiz App!</string>
    <string name="welcome">Welcome</string>
    <string name="prompt">Please enter your name</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="quiz_image">Quiz Image</string>
    <string name="submit">Submit</string>
    <string name="result">Result!</string>
</resources>